Closed
Bug 1295922
Opened 6 years ago
Closed 6 years ago
webkitdirectory custom UI does not work.
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla51
People
(Reporter: qab, Assigned: smaug)
Details
Attachments
(2 files, 1 obsolete file)
236 bytes,
text/html
|
Details | |
1.33 KB,
patch
|
ritu
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/52.0.2743.116 Safari/537.36 Steps to reproduce: Open attached PoC. 1. Click on the folder uploader directly, a normal folder upload appears. 2. Click on the 'custom UI' button, a file picker appears instead of a folder picker. Actual results: Does not seem like its possible to have custom UI for folder upload. This breaks the folder upload feature on Google Drive for example. Expected results: A folder picker should have appeared when clicking the Custom UI button.
Assignee | ||
Updated•6 years ago
|
Flags: needinfo?(amarchesini)
Assignee | ||
Comment 1•6 years ago
|
||
[Tracking Requested - why for this release]: We're trying to get webkitdirectory to FF50, and looks like this is incompatibility with Chrome implementation.
status-firefox50:
--- → affected
status-firefox51:
--- → affected
tracking-firefox50:
--- → ?
tracking-firefox51:
--- → ?
Assignee | ||
Comment 2•6 years ago
|
||
HTMLInputElement::MaybeInitPickers is wrong. I guess I can take this.
Assignee: nobody → bugs
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: needinfo?(amarchesini)
Assignee | ||
Comment 3•6 years ago
|
||
Attachment #8781994 -
Flags: review?(amarchesini)
Updated•6 years ago
|
Attachment #8781994 -
Flags: review?(amarchesini) → review+
Assignee | ||
Comment 4•6 years ago
|
||
Approval Request Comment [Feature/regressing bug #]: bug 1288683 enabled the API, but the buggy code is from bug 1164310 [User impact if declined]: Some websites might not work [Describe test coverage new/current, TreeHerder]: manual testing [Risks and why]: Should be very safe [String/UUID change made/needed]: NA m-i is closed atm, so exported the patch here. We could simplify that code a bit more, but since we want to land this to Aurora too, I kept the changes absolutely minimum.
Attachment #8782017 -
Flags: approval-mozilla-aurora?
Assignee | ||
Updated•6 years ago
|
Keywords: checkin-needed
Updated•6 years ago
|
Component: Untriaged → DOM
Product: Firefox → Core
Version: 51 Branch → 50 Branch
Updated•6 years ago
|
Attachment #8781994 -
Attachment is obsolete: true
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/13d7c16e0442 <input type=file webkitdirectory>.click() doesn't work. r=baku
Keywords: checkin-needed
Comment 7•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/13d7c16e0442
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Comment on attachment 8782017 [details] [diff] [review] with commit message Webkitdirectory is planned for Fx40, Aurora50+
Attachment #8782017 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 9•6 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/9429146dc481
Updated•3 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•