Bug 1295922 - <input type=file webkitdirectory>.click() doesn't work. r=baku